--- a/wedding-01-web/src/main/webapp/原型/export/首页.html
+++ b/wedding-01-web/src/main/webapp/原型/export/首页.html
@@ -103,71 +103,73 @@
         </div>
       </div>
 
+      <!-- Unnamed (菜单) -->
+
       <!-- Unnamed (Tree) -->
-      <div id="u12" class="ax_tree_node treeroot">
-        <div id="u12_children" class="u12_children">
+      <div id="u13" class="ax_tree_node treeroot">
+        <div id="u13_children" class="u13_children">
 
           <!-- Unnamed (Tree Node) -->
-          <div id="u13" class="ax_tree_node treenode">
+          <div id="u14" class="ax_tree_node treenode">
 
             <!-- Unnamed (Image) -->
-            <div id="u14" class="ax_image">
-              <img id="u14_img" class="img " src="images/首页/u14_selected.png"/>
+            <div id="u15" class="ax_image">
+              <img id="u15_img" class="img " src="images/首页/u15_selected.png"/>
               <!-- Unnamed () -->
-              <div id="u15" class="text">
+              <div id="u16" class="text">
                 <p><span/></p>
               </div>
             </div>
             <!-- Unnamed (Shape) -->
-            <div id="u16" class="" selectiongroup="u12_tree_group">
-              <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u17" class="" selectiongroup="u12u13_tree_group">
+              <img id="u17_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u17" class="text">
+              <div id="u18" class="text">
                 <p><span>首</span><span>页</span></p>
               </div>
             </div>
-            <div id="u13_children" class="u13_children">
+            <div id="u14_children" class="u14_children">
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u18" class="ax_tree_node treenode">
+              <div id="u19" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u19" class="ax_image">
-                  <img id="u19_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u20" class="ax_image">
+                  <img id="u20_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u20" class="text">
+                  <div id="u21" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u21" class="" selectiongroup="u12_tree_group">
-                  <img id="u21_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u22" class="" selectiongroup="u12u13_tree_group">
+                  <img id="u22_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u22" class="text">
+                  <div id="u23" class="text">
                     <p><span>订单管理</span></p>
                   </div>
                 </div>
-                <div id="u18_children" class="u18_children">
+                <div id="u19_children" class="u19_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u23" class="ax_tree_node treenode">
+                  <div id="u24" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u24" class="" selectiongroup="u12_tree_group">
-                      <img id="u24_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u25" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u25_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u25" class="text">
+                      <div id="u26" class="text">
                         <p><span>订单管理</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u26" class="ax_tree_node treenode">
+                  <div id="u27" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u27" class="" selectiongroup="u12_tree_group">
-                      <img id="u27_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u28" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u28_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u28" class="text">
+                      <div id="u29" class="text">
                         <p><span>人</span><span>员安排</span></p>
                       </div>
                     </div>
@@ -176,117 +178,117 @@
               </div>
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u29" class="ax_tree_node treenode">
+              <div id="u30" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u30" class="ax_image">
-                  <img id="u30_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u31" class="ax_image">
+                  <img id="u31_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u31" class="text">
+                  <div id="u32" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u32" class="" selectiongroup="u12_tree_group">
-                  <img id="u32_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u33" class="" selectiongroup="u12u13_tree_group">
+                  <img id="u33_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u33" class="text">
+                  <div id="u34" class="text">
                     <p><span>库</span><span>存管理</span></p>
                   </div>
                 </div>
-                <div id="u29_children" class="u29_children">
+                <div id="u30_children" class="u30_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u34" class="ax_tree_node treenode">
+                  <div id="u35" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u35" class="" selectiongroup="u12_tree_group">
-                      <img id="u35_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u36" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u36_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u36" class="text">
-                        <p><span>业务</span><span>出库</span></p>
+                      <div id="u37" class="text">
+                        <p><span>合同</span><span>出库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u37" class="ax_tree_node treenode">
+                  <div id="u38" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u38" class="" selectiongroup="u12_tree_group">
-                      <img id="u38_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u39" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u39_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u39" class="text">
+                      <div id="u40" class="text">
                         <p><span>其</span><span>他出库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u40" class="ax_tree_node treenode">
+                  <div id="u41" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u41" class="" selectiongroup="u12_tree_group">
-                      <img id="u41_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u42" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u42_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u42" class="text">
+                      <div id="u43" class="text">
                         <p><span>出</span><span>库订单</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u43" class="ax_tree_node treenode">
+                  <div id="u44" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u44" class="" selectiongroup="u12_tree_group">
-                      <img id="u44_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u45" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u45_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u45" class="text">
+                      <div id="u46" class="text">
                         <p><span>采</span><span>购申请</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u46" class="ax_tree_node treenode">
+                  <div id="u47" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u47" class="" selectiongroup="u12_tree_group">
-                      <img id="u47_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u48" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u48_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u48" class="text">
+                      <div id="u49" class="text">
                         <p><span>采</span><span>购入库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u49" class="ax_tree_node treenode">
+                  <div id="u50" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u50" class="" selectiongroup="u12_tree_group">
-                      <img id="u50_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u51" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u51_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u51" class="text">
-                        <p><span>业</span><span>务归还</span></p>
+                      <div id="u52" class="text">
+                        <p><span>归还入库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u52" class="ax_tree_node treenode">
+                  <div id="u53" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u53" class="" selectiongroup="u12_tree_group">
-                      <img id="u53_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u54" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u54_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u54" class="text">
+                      <div id="u55" class="text">
                         <p><span>道具报损</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u55" class="ax_tree_node treenode">
+                  <div id="u56" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u56" class="" selectiongroup="u12_tree_group">
-                      <img id="u56_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u57" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u57_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u57" class="text">
+                      <div id="u58" class="text">
                         <p><span>道具盘点</span></p>
                       </div>
                     </div>
@@ -295,34 +297,46 @@
               </div>
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u58" class="ax_tree_node treenode">
+              <div id="u59" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u59" class="ax_image">
-                  <img id="u59_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u60" class="ax_image">
+                  <img id="u60_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u60" class="text">
+                  <div id="u61" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u61" class="" selectiongroup="u12_tree_group">
-                  <img id="u61_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u62" class="" selectiongroup="u12u13_tree_group">
+                  <img id="u62_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u62" class="text">
+                  <div id="u63" class="text">
                     <p><span>日常管理</span></p>
                   </div>
                 </div>
-                <div id="u58_children" class="u58_children">
+                <div id="u59_children" class="u59_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u63" class="ax_tree_node treenode">
+                  <div id="u64" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u64" class="" selectiongroup="u12_tree_group">
-                      <img id="u64_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u65" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u65_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u65" class="text">
+                      <div id="u66" class="text">
                         <p><span>开</span><span>销申请</span></p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (Tree Node) -->
+                  <div id="u67" class="ax_tree_node treenode">
+                    <!-- Unnamed (Shape) -->
+                    <div id="u68" class="" selectiongroup="u12u13_tree_group">
+                      <img id="u68_img" class="img " src="resources/images/transparent.gif"/>
+                      <!-- Unnamed () -->
+                      <div id="u69" class="text">
+                        <p><span>员工考勤</span></p>
                       </div>
                     </div>
                   </div>
