--- a/wedding-01-web/src/main/webapp/原型/export/人员安排.html
+++ b/wedding-01-web/src/main/webapp/原型/export/人员安排.html
@@ -815,71 +815,73 @@
         </div>
       </div>
 
+      <!-- Unnamed (菜单) -->
+
       <!-- Unnamed (Tree) -->
-      <div id="u163" class="ax_tree_node treeroot">
-        <div id="u163_children" class="u163_children">
+      <div id="u164" class="ax_tree_node treeroot">
+        <div id="u164_children" class="u164_children">
 
           <!-- Unnamed (Tree Node) -->
-          <div id="u164" class="ax_tree_node treenode">
+          <div id="u165" class="ax_tree_node treenode">
 
             <!-- Unnamed (Image) -->
-            <div id="u165" class="ax_image">
-              <img id="u165_img" class="img " src="images/首页/u14_selected.png"/>
+            <div id="u166" class="ax_image">
+              <img id="u166_img" class="img " src="images/首页/u15_selected.png"/>
               <!-- Unnamed () -->
-              <div id="u166" class="text">
+              <div id="u167" class="text">
                 <p><span/></p>
               </div>
             </div>
             <!-- Unnamed (Shape) -->
-            <div id="u167" class="" selectiongroup="u163_tree_group">
-              <img id="u167_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u168" class="" selectiongroup="u163u164_tree_group">
+              <img id="u168_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u168" class="text">
+              <div id="u169" class="text">
                 <p><span>首</span><span>页</span></p>
               </div>
             </div>
-            <div id="u164_children" class="u164_children">
+            <div id="u165_children" class="u165_children">
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u169" class="ax_tree_node treenode">
+              <div id="u170" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u170" class="ax_image">
-                  <img id="u170_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u171" class="ax_image">
+                  <img id="u171_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u171" class="text">
+                  <div id="u172" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u172" class="" selectiongroup="u163_tree_group">
-                  <img id="u172_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u173" class="" selectiongroup="u163u164_tree_group">
+                  <img id="u173_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u173" class="text">
+                  <div id="u174" class="text">
                     <p><span>订单管理</span></p>
                   </div>
                 </div>
-                <div id="u169_children" class="u169_children">
+                <div id="u170_children" class="u170_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u174" class="ax_tree_node treenode">
+                  <div id="u175" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u175" class="" selectiongroup="u163_tree_group">
-                      <img id="u175_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u176" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u176_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u176" class="text">
+                      <div id="u177" class="text">
                         <p><span>订单管理</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u177" class="ax_tree_node treenode">
+                  <div id="u178" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u178" class="" selectiongroup="u163_tree_group">
-                      <img id="u178_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u179" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u179_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u179" class="text">
+                      <div id="u180" class="text">
                         <p><span>人</span><span>员安排</span></p>
                       </div>
                     </div>
@@ -888,117 +890,117 @@
               </div>
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u180" class="ax_tree_node treenode">
+              <div id="u181" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u181" class="ax_image">
-                  <img id="u181_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u182" class="ax_image">
+                  <img id="u182_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u182" class="text">
+                  <div id="u183" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u183" class="" selectiongroup="u163_tree_group">
-                  <img id="u183_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u184" class="" selectiongroup="u163u164_tree_group">
+                  <img id="u184_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u184" class="text">
+                  <div id="u185" class="text">
                     <p><span>库</span><span>存管理</span></p>
                   </div>
                 </div>
-                <div id="u180_children" class="u180_children">
+                <div id="u181_children" class="u181_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u185" class="ax_tree_node treenode">
+                  <div id="u186" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u186" class="" selectiongroup="u163_tree_group">
-                      <img id="u186_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u187" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u187_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u187" class="text">
-                        <p><span>业务</span><span>出库</span></p>
+                      <div id="u188" class="text">
+                        <p><span>合同</span><span>出库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u188" class="ax_tree_node treenode">
+                  <div id="u189" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u189" class="" selectiongroup="u163_tree_group">
-                      <img id="u189_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u190" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u190_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u190" class="text">
+                      <div id="u191" class="text">
                         <p><span>其</span><span>他出库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u191" class="ax_tree_node treenode">
+                  <div id="u192" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u192" class="" selectiongroup="u163_tree_group">
-                      <img id="u192_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u193" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u193_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u193" class="text">
+                      <div id="u194" class="text">
                         <p><span>出</span><span>库订单</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u194" class="ax_tree_node treenode">
+                  <div id="u195" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u195" class="" selectiongroup="u163_tree_group">
-                      <img id="u195_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u196" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u196_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u196" class="text">
+                      <div id="u197" class="text">
                         <p><span>采</span><span>购申请</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u197" class="ax_tree_node treenode">
+                  <div id="u198" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u198" class="" selectiongroup="u163_tree_group">
-                      <img id="u198_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u199" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u199_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u199" class="text">
+                      <div id="u200" class="text">
                         <p><span>采</span><span>购入库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u200" class="ax_tree_node treenode">
+                  <div id="u201" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u201" class="" selectiongroup="u163_tree_group">
-                      <img id="u201_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u202" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u202_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u202" class="text">
-                        <p><span>其</span><span>他入库</span></p>
+                      <div id="u203" class="text">
+                        <p><span>归还入库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u203" class="ax_tree_node treenode">
+                  <div id="u204" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u204" class="" selectiongroup="u163_tree_group">
-                      <img id="u204_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u205" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u205_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u205" class="text">
+                      <div id="u206" class="text">
                         <p><span>道具报损</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u206" class="ax_tree_node treenode">
+                  <div id="u207" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u207" class="" selectiongroup="u163_tree_group">
-                      <img id="u207_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u208" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u208_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u208" class="text">
+                      <div id="u209" class="text">
                         <p><span>道具盘点</span></p>
                       </div>
                     </div>
@@ -1007,34 +1009,46 @@
               </div>
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u209" class="ax_tree_node treenode">
+              <div id="u210" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u210" class="ax_image">
-                  <img id="u210_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u211" class="ax_image">
+                  <img id="u211_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u211" class="text">
+                  <div id="u212" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u212" class="" selectiongroup="u163_tree_group">
-                  <img id="u212_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u213" class="" selectiongroup="u163u164_tree_group">
+                  <img id="u213_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u213" class="text">
+                  <div id="u214" class="text">
                     <p><span>日常管理</span></p>
                   </div>
                 </div>
-                <div id="u209_children" class="u209_children">
+                <div id="u210_children" class="u210_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u214" class="ax_tree_node treenode">
+                  <div id="u215" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u215" class="" selectiongroup="u163_tree_group">
-                      <img id="u215_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u216" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u216_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u216" class="text">
+                      <div id="u217" class="text">
                         <p><span>开</span><span>销申请</span></p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (Tree Node) -->
+                  <div id="u218" class="ax_tree_node treenode">
+                    <!-- Unnamed (Shape) -->
+                    <div id="u219" class="" selectiongroup="u163u164_tree_group">
+                      <img id="u219_img" class="img " src="resources/images/transparent.gif"/>
+                      <!-- Unnamed () -->
+                      <div id="u220" class="text">
+                        <p><span>员工考勤</span></p>
                       </div>
                     </div>
                   </div>
