--- a/wedding-01-web/src/main/webapp/原型/export/出库订单.html
+++ b/wedding-01-web/src/main/webapp/原型/export/出库订单.html
@@ -578,71 +578,73 @@
         </div>
       </div>
 
+      <!-- Unnamed (菜单) -->
+
       <!-- Unnamed (Tree) -->
-      <div id="u117" class="ax_tree_node treeroot">
-        <div id="u117_children" class="u117_children">
+      <div id="u118" class="ax_tree_node treeroot">
+        <div id="u118_children" class="u118_children">
 
           <!-- Unnamed (Tree Node) -->
-          <div id="u118" class="ax_tree_node treenode">
+          <div id="u119" class="ax_tree_node treenode">
 
             <!-- Unnamed (Image) -->
-            <div id="u119" class="ax_image">
-              <img id="u119_img" class="img " src="images/首页/u14_selected.png"/>
+            <div id="u120" class="ax_image">
+              <img id="u120_img" class="img " src="images/首页/u15_selected.png"/>
               <!-- Unnamed () -->
-              <div id="u120" class="text">
+              <div id="u121" class="text">
                 <p><span/></p>
               </div>
             </div>
             <!-- Unnamed (Shape) -->
-            <div id="u121" class="" selectiongroup="u117_tree_group">
-              <img id="u121_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u122" class="" selectiongroup="u117u118_tree_group">
+              <img id="u122_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
-              <div id="u122" class="text">
+              <div id="u123" class="text">
                 <p><span>首</span><span>页</span></p>
               </div>
             </div>
-            <div id="u118_children" class="u118_children">
+            <div id="u119_children" class="u119_children">
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u123" class="ax_tree_node treenode">
+              <div id="u124" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u124" class="ax_image">
-                  <img id="u124_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u125" class="ax_image">
+                  <img id="u125_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u125" class="text">
+                  <div id="u126" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u126" class="" selectiongroup="u117_tree_group">
-                  <img id="u126_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u127" class="" selectiongroup="u117u118_tree_group">
+                  <img id="u127_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u127" class="text">
+                  <div id="u128" class="text">
                     <p><span>订单管理</span></p>
                   </div>
                 </div>
-                <div id="u123_children" class="u123_children">
+                <div id="u124_children" class="u124_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u128" class="ax_tree_node treenode">
+                  <div id="u129" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u129" class="" selectiongroup="u117_tree_group">
-                      <img id="u129_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u130" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u130_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u130" class="text">
+                      <div id="u131" class="text">
                         <p><span>订单管理</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u131" class="ax_tree_node treenode">
+                  <div id="u132" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u132" class="" selectiongroup="u117_tree_group">
-                      <img id="u132_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u133" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u133_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u133" class="text">
+                      <div id="u134" class="text">
                         <p><span>人</span><span>员安排</span></p>
                       </div>
                     </div>
@@ -651,117 +653,117 @@
               </div>
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u134" class="ax_tree_node treenode">
+              <div id="u135" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u135" class="ax_image">
-                  <img id="u135_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u136" class="ax_image">
+                  <img id="u136_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u136" class="text">
+                  <div id="u137" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u137" class="" selectiongroup="u117_tree_group">
-                  <img id="u137_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u138" class="" selectiongroup="u117u118_tree_group">
+                  <img id="u138_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u138" class="text">
+                  <div id="u139" class="text">
                     <p><span>库</span><span>存管理</span></p>
                   </div>
                 </div>
-                <div id="u134_children" class="u134_children">
+                <div id="u135_children" class="u135_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u139" class="ax_tree_node treenode">
+                  <div id="u140" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u140" class="" selectiongroup="u117_tree_group">
-                      <img id="u140_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u141" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u141_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u141" class="text">
-                        <p><span>业务</span><span>出库</span></p>
+                      <div id="u142" class="text">
+                        <p><span>合同</span><span>出库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u142" class="ax_tree_node treenode">
+                  <div id="u143" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u143" class="" selectiongroup="u117_tree_group">
-                      <img id="u143_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u144" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u144_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u144" class="text">
+                      <div id="u145" class="text">
                         <p><span>其</span><span>他出库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u145" class="ax_tree_node treenode">
+                  <div id="u146" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u146" class="" selectiongroup="u117_tree_group">
-                      <img id="u146_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u147" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u147_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u147" class="text">
+                      <div id="u148" class="text">
                         <p><span>出</span><span>库订单</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u148" class="ax_tree_node treenode">
+                  <div id="u149" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u149" class="" selectiongroup="u117_tree_group">
-                      <img id="u149_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u150" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u150_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u150" class="text">
+                      <div id="u151" class="text">
                         <p><span>采</span><span>购申请</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u151" class="ax_tree_node treenode">
+                  <div id="u152" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u152" class="" selectiongroup="u117_tree_group">
-                      <img id="u152_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u153" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u153_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u153" class="text">
+                      <div id="u154" class="text">
                         <p><span>采</span><span>购入库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u154" class="ax_tree_node treenode">
+                  <div id="u155" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u155" class="" selectiongroup="u117_tree_group">
-                      <img id="u155_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u156" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u156_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u156" class="text">
-                        <p><span>其</span><span>他入库</span></p>
+                      <div id="u157" class="text">
+                        <p><span>归还入库</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u157" class="ax_tree_node treenode">
+                  <div id="u158" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u158" class="" selectiongroup="u117_tree_group">
-                      <img id="u158_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u159" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u159_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u159" class="text">
+                      <div id="u160" class="text">
                         <p><span>道具报损</span></p>
                       </div>
                     </div>
                   </div>
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u160" class="ax_tree_node treenode">
+                  <div id="u161" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u161" class="" selectiongroup="u117_tree_group">
-                      <img id="u161_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u162" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u162_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u162" class="text">
+                      <div id="u163" class="text">
                         <p><span>道具盘点</span></p>
                       </div>
                     </div>
@@ -770,34 +772,46 @@
               </div>
 
               <!-- Unnamed (Tree Node) -->
-              <div id="u163" class="ax_tree_node treenode">
+              <div id="u164" class="ax_tree_node treenode">
 
                 <!-- Unnamed (Image) -->
-                <div id="u164" class="ax_image">
-                  <img id="u164_img" class="img " src="images/首页/u14_selected.png"/>
+                <div id="u165" class="ax_image">
+                  <img id="u165_img" class="img " src="images/首页/u15_selected.png"/>
                   <!-- Unnamed () -->
-                  <div id="u165" class="text">
+                  <div id="u166" class="text">
                     <p><span/></p>
                   </div>
                 </div>
                 <!-- Unnamed (Shape) -->
-                <div id="u166" class="" selectiongroup="u117_tree_group">
-                  <img id="u166_img" class="img " src="resources/images/transparent.gif"/>
+                <div id="u167" class="" selectiongroup="u117u118_tree_group">
+                  <img id="u167_img" class="img " src="resources/images/transparent.gif"/>
                   <!-- Unnamed () -->
-                  <div id="u167" class="text">
+                  <div id="u168" class="text">
                     <p><span>日常管理</span></p>
                   </div>
                 </div>
-                <div id="u163_children" class="u163_children">
+                <div id="u164_children" class="u164_children">
 
                   <!-- Unnamed (Tree Node) -->
-                  <div id="u168" class="ax_tree_node treenode">
+                  <div id="u169" class="ax_tree_node treenode">
                     <!-- Unnamed (Shape) -->
-                    <div id="u169" class="" selectiongroup="u117_tree_group">
-                      <img id="u169_img" class="img " src="resources/images/transparent.gif"/>
+                    <div id="u170" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u170_img" class="img " src="resources/images/transparent.gif"/>
                       <!-- Unnamed () -->
-                      <div id="u170" class="text">
+                      <div id="u171" class="text">
                         <p><span>开</span><span>销申请</span></p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (Tree Node) -->
+                  <div id="u172" class="ax_tree_node treenode">
+                    <!-- Unnamed (Shape) -->
+                    <div id="u173" class="" selectiongroup="u117u118_tree_group">
+                      <img id="u173_img" class="img " src="resources/images/transparent.gif"/>
+                      <!-- Unnamed () -->
+                      <div id="u174" class="text">
+                        <p><span>员工考勤</span></p>
                       </div>
                     </div>
                   </div>
